--- a/index.html
+++ b/index.html
@@ -1,42 +1,34 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Kriarttive - Handmade Creations</title>
-    <link rel="stylesheet" href="style.css">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600&display=swap" rel="stylesheet">
-    
-    <!-- Google Visualization API Loader -->
-    <script type="text/javascript" src="https://www.gstatic.com/charts/loader.js"></script>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width,initial-scale=1">
+  <title>Kriarttive – Handmade Creations</title>
+  <link rel="stylesheet" href="style.css">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600&display=swap" rel="stylesheet">
+  <script type="text/javascript" src="https://www.gstatic.com/charts/loader.js"></script>
 </head>
 <body>
-
-    <header class="site-header">
-        <div class="container">
-            <h1>Kriarttive</h1>
-            <p>Handmade with love and creativity</p>
-        </div>
-    </header>
-
-    <main>
-        <div class="container">
-            <div id="product-grid" class="product-grid">
-                <!-- Products will be loaded here by JavaScript -->
-                <div class="loading-message">Loading products...</div>
-            </div>
-        </div>
-    </main>
-
-    <footer class="site-footer">
-        <div class="container">
-            <p>&copy; 2023 Kriarttive. All rights reserved.</p>
-        </div>
-    </footer>
-
-    <!-- Link to our JavaScript file -->
-    <script src="script.js"></script>
+  <header class="site-header">
+    <div class="container">
+      <h1>Kriarttive</h1>
+      <p>Handmade with love and creativity</p>
+    </div>
+  </header>
+  <main>
+    <div class="container">
+      <div id="product-grid" class="product-grid">
+        <div class="loading-message">Loading products...</div>
+      </div>
+    </div>
+  </main>
+  <footer class="site-footer">
+    <div class="container">
+      <p>&copy; 2025 Kriarttive. All rights reserved.</p>
+    </div>
+  </footer>
+  <script src="script.js"></script>
 </body>
 </html>
