--- a/admin.html
+++ b/admin.html
@@ -9,47 +9,46 @@
 <body>
   <header class="site-header">
     <div class="container">
-      <h1>Kriarttive — Admin</h1>
-      <p>Admin panel — add / edit products and view requests</p>
+      <h1>Kriarttive — Admin Panel</h1>
+      <p>Upload products with images, manage items, and view requests</p>
     </div>
   </header>
 
   <main>
     <div class="container admin-container">
-      <!-- Simple password gate -->
+      <!-- Admin login -->
       <div id="login-box" class="card">
         <h2>Admin Login</h2>
         <input id="admin-password" type="password" placeholder="Enter admin password" />
         <button id="login-btn">Login</button>
-        <p style="font-size:0.9rem;color:#666;margin-top:0.6rem;">(Password stored in this file — change before publishing publicly.)</p>
+        <p style="font-size:0.9rem;color:#666;margin-top:0.6rem;">
+          (Change ADMIN_PASSWORD below before publishing)
+        </p>
       </div>
 
+      <!-- Admin area (hidden until login) -->
       <div id="admin-area" style="display:none;">
-        <!-- Add / Edit form -->
+        <!-- Upload form -->
         <section class="card">
-          <h2 id="form-title">Add Product</h2>
-          <form id="product-form">
-            <input id="p-name" placeholder="Name" required />
-            <input id="p-price" placeholder="Price (number)" type="number" step="0.01" required />
-            <input id="p-image" placeholder="Image URL" type="url" />
-            <textarea id="p-desc" rows="4" placeholder="Description"></textarea>
-            <div style="display:flex;gap:8px;">
-              <button type="submit" id="save-btn">Save</button>
-              <button type="button" id="cancel-edit" style="display:none;">Cancel</button>
-            </div>
-            <input type="hidden" id="editing-index" value="-1" />
+          <h2>Upload New Product</h2>
+          <form id="upload-form">
+            <input id="prod-name" placeholder="Product Name" required /><br/>
+            <input id="prod-price" type="number" step="0.01" placeholder="Price" required /><br/>
+            <input id="prod-desc" placeholder="Description" /><br/>
+            <input id="prod-image" type="file" accept="image/*" required /><br/>
+            <button type="submit">Upload Product</button>
           </form>
         </section>
 
-        <!-- Products list / manage -->
+        <!-- Product management -->
         <section class="card">
-          <h2>Products</h2>
-          <div id="admin-products"></div>
+          <h2>Manage Products</h2>
+          <div id="products-list">Loading products...</div>
         </section>
 
-        <!-- Requests -->
+        <!-- View requests -->
         <section class="card">
-          <h2>Requests</h2>
+          <h2>Customer Requests</h2>
           <div id="requests-list">Loading requests...</div>
         </section>
       </div>
@@ -63,141 +62,102 @@
   </footer>
 
 <script>
-/* ===========================
-  Replace with your deployed Apps Script Web App URL
-  (the one you gave earlier)
-=========================== */
-const WEBAPP_URL = "YOUR_WEBAPP_URL_HERE";
+/* ======= CONFIGURATION ======= */
+const WEBAPP_URL = "https://script.google.com/macros/s/AKfycbwMz8e5nQHuA6GJR7dhqYQ4KAwEstxUupawjOCtOrYHOlcIM-ETfKadrdzvHwyjdinx/exec";
+const ADMIN_PASSWORD = "your_admin_password"; // Change this to a password you choose
+/* =============================== */
 
-/* Simple client-side admin password — change this string before publishing */
-const ADMIN_PASSWORD = "kriadmin123";
-
-/* Helper fetch wrapper */
-async function apiCall(params) {
+// Utility to call GET endpoints
+async function apiGet(params) {
   const url = new URL(WEBAPP_URL);
   Object.keys(params).forEach(k => url.searchParams.append(k, params[k]));
   const res = await fetch(url.toString());
   return res.json();
 }
 
-/* Login logic */
-document.getElementById('login-btn').addEventListener('click', ()=> {
-  const val = document.getElementById('admin-password').value;
-  if (val === ADMIN_PASSWORD) {
+// Utility to call POST for upload
+async function apiPost(formData) {
+  const res = await fetch(WEBAPP_URL, { method: "POST", body: formData });
+  return res.json();
+}
+
+/* ====== LOGIN ====== */
+document.getElementById('login-btn').onclick = () => {
+  if (document.getElementById('admin-password').value === ADMIN_PASSWORD) {
     document.getElementById('login-box').style.display = 'none';
     document.getElementById('admin-area').style.display = 'block';
-    loadProductsForAdmin();
+    loadProducts();
     loadRequests();
   } else {
-    alert('Wrong password');
+    alert('Incorrect password');
   }
-});
+};
 
-/* Load products for admin */
-async function loadProductsForAdmin() {
-  const r = await apiCall({function: 'getProducts'});
-  const products = r;
-  const container = document.getElementById('admin-products');
-  container.innerHTML = '';
-  if (!Array.isArray(products) || products.length === 0) {
-    container.innerHTML = '<p>No products found.</p>';
+/* ====== UPLOAD PRODUCT HANDLER ====== */
+document.getElementById('upload-form').onsubmit = async (ev) => {
+  ev.preventDefault();
+  const name = document.getElementById('prod-name').value.trim();
+  const price = document.getElementById('prod-price').value.trim();
+  const desc = document.getElementById('prod-desc').value.trim();
+  const fileInput = document.getElementById('prod-image');
+  if (!fileInput.files.length) return alert("Select an image");
+
+  const file = fileInput.files[0];
+  const reader = new FileReader();
+  reader.onload = async (e) => {
+    const base64 = e.target.result.split(',')[1];
+    const formData = new FormData();
+    formData.append('action', 'uploadProduct');
+    formData.append('name', name);
+    formData.append('price', price);
+    formData.append('description', desc);
+    formData.append('fileName', file.name);
+    formData.append('mimeType', file.type);
+    formData.append('image', base64);
+
+    const res = await apiPost(formData);
+    if (res.ok) {
+      alert("Product uploaded successfully!");
+      ev.target.reset();
+      loadProducts();
+    } else {
+      alert("Upload failed: " + res.error);
+    }
+  };
+  reader.readAsDataURL(file);
+};
+
+/* ====== LOAD & DISPLAY PRODUCTS ====== */
+async function loadProducts() {
+  const list = await apiGet({ function: "getProducts" });
+  const container = document.getElementById('products-list');
+  if (!Array.isArray(list) || list.length === 0) {
+    container.innerHTML = "<p>No products yet.</p>";
     return;
   }
-  products.forEach((p, idx) => {
-    const div = document.createElement('div');
-    div.className = 'admin-product';
-    div.innerHTML = `
-      <img src="${p.ImageURL || ''}" alt="${p.Name || ''}">
-      <div class="admin-product-info">
-        <strong>${p.Name || ''}</strong>
-        <div>Price: NPR ${p.Price || ''}</div>
-        <div class="admin-actions">
-          <button data-idx="${idx}" class="edit-btn">Edit</button>
-          <button data-idx="${idx}" class="delete-btn">Delete</button>
-        </div>
-      </div>
-    `;
-    container.appendChild(div);
-  });
-
-  // attach listeners
-  document.querySelectorAll('.edit-btn').forEach(btn => {
-    btn.addEventListener('click', async (e) => {
-      const idx = e.target.dataset.idx;
-      const product = products[idx];
-      document.getElementById('p-name').value = product.Name || '';
-      document.getElementById('p-price').value = product.Price || '';
-      document.getElementById('p-image').value = product.ImageURL || '';
-      document.getElementById('p-desc').value = product.Description || '';
-      document.getElementById('editing-index').value = idx;
-      document.getElementById('form-title').innerText = 'Edit Product';
-      document.getElementById('cancel-edit').style.display = 'inline-block';
-      document.getElementById('save-btn').innerText = 'Update';
-    });
-  });
-
-  document.querySelectorAll('.delete-btn').forEach(btn => {
-    btn.addEventListener('click', async (e) => {
-      const idx = e.target.dataset.idx;
-      if (!confirm('Delete this product?')) return;
-      await apiCall({function:'deleteProduct', rowIndex: idx});
-      alert('Deleted');
-      loadProductsForAdmin();
-    });
-  });
+  container.innerHTML = '<ul>' +
+    list.map((p, idx) =>
+      `<li><strong>${p.Name}</strong> — रु ${p.Price}<br/>
+         <img src="${p["Image URL"] || p.ImageURL}" alt="${p.Name}" style="height:50px;vertical-align:middle;"/>
+       </li>`
+    ).join('') +
+    '</ul>';
 }
 
-/* Handle form submit add / update */
-document.getElementById('product-form').addEventListener('submit', async (ev) => {
-  ev.preventDefault();
-  const name = document.getElementById('p-name').value.trim();
-  const price = document.getElementById('p-price').value;
-  const image = document.getElementById('p-image').value.trim();
-  const desc = document.getElementById('p-desc').value.trim();
-  const editing = Number(document.getElementById('editing-index').value);
-
-  if (editing >= 0) {
-    // update
-    await apiCall({function:'updateProduct', rowIndex: editing, name, price, imageURL: image, description: desc});
-    alert('Updated');
-  } else {
-    // add
-    await apiCall({function:'addProduct', name, price, imageURL: image, description: desc});
-    alert('Added');
-  }
-  // reset
-  document.getElementById('product-form').reset();
-  document.getElementById('editing-index').value = -1;
-  document.getElementById('form-title').innerText = 'Add Product';
-  document.getElementById('cancel-edit').style.display = 'none';
-  document.getElementById('save-btn').innerText = 'Save';
-  loadProductsForAdmin();
-});
-
-/* Cancel edit */
-document.getElementById('cancel-edit').addEventListener('click', () => {
-  document.getElementById('product-form').reset();
-  document.getElementById('editing-index').value = -1;
-  document.getElementById('form-title').innerText = 'Add Product';
-  document.getElementById('cancel-edit').style.display = 'none';
-  document.getElementById('save-btn').innerText = 'Save';
-});
-
-/* Load requests */
+/* ====== LOAD & DISPLAY REQUESTS ====== */
 async function loadRequests() {
-  const r = await apiCall({function:'getRequests'});
-  const list = r;
-  const el = document.getElementById('requests-list');
-  if (!Array.isArray(list) || list.length === 0) {
-    el.innerHTML = '<p>No requests yet.</p>';
+  const reqs = await apiGet({ function: "getRequests" });
+  const container = document.getElementById('requests-list');
+  if (!Array.isArray(reqs) || !reqs.length) {
+    container.innerText = "No requests yet.";
     return;
   }
-  el.innerHTML = '<table class="requests-table"><thead><tr><th>Timestamp</th><th>Name</th><th>Phone</th><th>Address</th></tr></thead><tbody>' +
-    list.map(x => `<tr><td>${x.Timestamp}</td><td>${x["Customer Name"] || x.CustomerName || ''}</td><td>${x["Phone Number"] || x.Phone || ''}</td><td>${x.Address || ''}</td></tr>`).join('') +
+  container.innerHTML = '<table class="requests-table"><thead><tr><th>Time</th><th>Name</th><th>Phone</th><th>Address</th></tr></thead><tbody>' +
+    reqs.map(r =>
+      `<tr><td>${r.Timestamp}</td><td>${r["Customer Name"]}</td><td>${r["Phone Number"]}</td><td>${r.Address}</td></tr>`
+    ).join('') +
     '</tbody></table>';
 }
-
-/* On load: nothing (wait for login) */
 </script>
 </body>
 </html>
