--- a/index.html
+++ b/index.html
@@ -1,22 +1,51 @@
-<!DOCTYPE html>
-<html lang="en">
+<!doctype html>
+<html>
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Product Store</title>
-  <link rel="stylesheet" href="style.css">
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width,initial-scale=1" />
+  <title>Kriarttive — Handmade</title>
+  <link rel="stylesheet" href="style.css" />
 </head>
 <body>
-  <h1>Welcome to Our Store</h1>
-  <div id="product-list"></div>
+  <div class="container">
+    <header class="header">
+      <div class="brand">
+        <div class="logo">K</div>
+        <div>
+          <h1>Kriarttive</h1>
+          <div class="small">Handmade creations — delivered with love</div>
+        </div>
+      </div>
+      <nav><a href="admin.html" class="small">Admin</a></nav>
+    </header>
 
-  <h2>Request a Product</h2>
-  <form id="requestForm">
-    <input type="text" id="reqName" placeholder="Your Name" required>
-    <input type="text" id="reqPhone" placeholder="Phone Number" required>
-    <input type="text" id="reqAddress" placeholder="Address" required>
-    <button type="submit">Submit Request</button>
-  </form>
+    <main>
+      <section id="productsSection">
+        <div id="productsGrid" class="products">
+          <!-- Cards injected here -->
+        </div>
+      </section>
+
+      <section class="grid-forms">
+        <div class="aside-card">
+          <h3>Quick Request</h3>
+          <div class="small">Fill details and we'll contact you.</div>
+          <input id="reqName" class="form-input" placeholder="Your name" />
+          <input id="reqPhone" class="form-input" placeholder="Phone number" />
+          <textarea id="reqAddress" class="form-input" placeholder="Delivery address"></textarea>
+          <button id="sendRequestBtn" class="btn" style="margin-top:10px">Send Request</button>
+        </div>
+
+        <aside class="aside-card">
+          <h4>Contact</h4>
+          <div class="small">Phone/WhatsApp: +977-XXXXXXXXX</div>
+          <div class="small" style="margin-top:8px">Visit admin panel to manage products.</div>
+        </aside>
+      </section>
+    </main>
+
+    <footer class="footer">© 2025 Kriarttive. All rights reserved.</footer>
+  </div>
 
   <script src="script.js"></script>
 </body>
