--- a/admin.html
+++ b/admin.html
@@ -1,34 +1,60 @@
-<!DOCTYPE html>
-<html lang="en">
+<!doctype html>
+<html>
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Admin Panel</title>
-  <link rel="stylesheet" href="style.css">
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width,initial-scale=1" />
+  <title>Kriarttive — Admin</title>
+  <link rel="stylesheet" href="style.css" />
+  <style>
+    .login-card{max-width:420px;margin:20px auto;padding:18px;border-radius:12px;background:#fff;box-shadow:0 8px 24px rgba(0,0,0,0.06)}
+    .admin-grid{max-width:1100px;margin:18px auto;display:grid;grid-template-columns:1fr 420px;gap:18px}
+    .actions button{margin-right:8px}
+    table{width:100%;border-collapse:collapse}
+    th,td{padding:8px;border:1px solid #eee;font-size:0.95rem}
+    .thumb{width:80px;height:60px;object-fit:cover;border-radius:6px}
+    @media(max-width:920px){.admin-grid{grid-template-columns:1fr}}
+  </style>
 </head>
 <body>
-  <h1>Admin Panel</h1>
+  <div class="container">
+    <div class="login-card" id="loginCard">
+      <h2>Admin Login</h2>
+      <input id="adminEmail" class="form-input" placeholder="Email" />
+      <input id="adminPwd" type="password" class="form-input" placeholder="Password" />
+      <div style="margin-top:10px">
+        <button id="loginBtn" class="btn">Login</button>
+      </div>
+      <div id="loginMsg" class="small" style="color:#c33;margin-top:8px"></div>
+    </div>
 
-  <div id="loginSection">
-    <h2>Login</h2>
-    <input type="email" id="adminEmail" placeholder="Email" required>
-    <input type="password" id="adminPassword" placeholder="Password" required>
-    <button id="loginBtn">Login</button>
-    <p id="loginMessage"></p>
-  </div>
+    <div id="adminArea" style="display:none">
+      <div class="admin-grid">
+        <div class="aside-card">
+          <h3>Add / Edit Product</h3>
+          <input id="prodName" class="form-input" placeholder="Name" />
+          <input id="prodPrice" class="form-input" placeholder="Price (NPR)" />
+          <textarea id="prodDesc" class="form-input" placeholder="Description"></textarea>
+          <input id="prodImage" type="file" accept="image/*" class="form-input" />
+          <div style="display:flex;gap:8px;margin-top:8px">
+            <button id="saveProdBtn" class="btn">Save Product</button>
+            <button id="cancelEditBtn" class="btn" style="background:#888">Cancel</button>
+          </div>
+          <div id="saveMsg" class="small" style="color:green;margin-top:8px"></div>
+        </div>
 
-  <div id="adminSection" style="display:none;">
-    <h2>Add Product</h2>
-    <form id="productForm">
-      <input type="text" id="productName" placeholder="Product Name" required>
-      <input type="text" id="productPrice" placeholder="Price" required>
-      <input type="file" id="productImage" accept="image/*" required>
-      <textarea id="productDescription" placeholder="Description"></textarea>
-      <button type="submit">Add Product</button>
-    </form>
+        <div>
+          <div class="aside-card">
+            <h3>Products</h3>
+            <div id="productsList"></div>
+          </div>
 
-    <h2>Customer Requests</h2>
-    <div id="requestsList"></div>
+          <div class="aside-card" style="margin-top:12px">
+            <h3>Requests</h3>
+            <div id="requestsList" style="max-height:260px;overflow:auto"></div>
+          </div>
+        </div>
+      </div>
+    </div>
   </div>
 
   <script src="script.js"></script>
